--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Microsoft Copilot Learning Hub. Internal use only.</p>
+            <p>&copy; 2025 Microsoft Copilot Learning Hub.</p>
         </div>
     </footer>
 </body>
