--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <a href="#setup">Setup Considerations</a>
                         <a href="#security">Security</a>
                         <a href="#studio">Copilot Studio</a>
+                        <a href="#studio-agents" class="sub-item">- Creating Copilot Agents</a>
                         <a href="#sales">Sales & Service</a>
                     </div>
                 </li>
