--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
                 <h3>Featured Guides</h3>
                 <div class="card-grid">
                     <div class="card" data-target="admin">
-                        <div class="card-icon"><i class="fas fa-user-shield"></i></div>
+                        <div class="card-icon icon-purple"><i class="fas fa-user-shield"></i></div>
                         <h4>Copilot for Administrators</h4>
                         <p>Learn how to manage, secure, and optimize Copilot across your organization</p>
                     </div>
                     <div class="card" data-target="enterprise">
-                        <div class="card-icon"><i class="fas fa-building"></i></div>
+                        <div class="card-icon icon-blue"><i class="fas fa-building"></i></div>
                         <h4>Enterprise Deployment</h4>
                         <p>Best practices for deploying Copilot in enterprise environments</p>
                     </div>
                     <div class="card" data-target="studio">
-                        <div class="card-icon"><i class="fas fa-code"></i></div>
+                        <div class="card-icon icon-teal"><i class="fas fa-code"></i></div>
                         <h4>Copilot Studio</h4>
                         <p>Create custom Copilot experiences for your organization</p>
                     </div>
@@ -91,32 +91,32 @@
                 <h3>Application Integrations</h3>
                 <div class="card-grid">
                     <div class="card" data-target="word">
-                        <div class="card-icon"><i class="fas fa-file-word"></i></div>
+                        <div class="card-icon icon-blue-dark"><i class="fas fa-file-word"></i></div>
                         <h4>Word</h4>
                         <p>Transform document creation with AI assistance</p>
                     </div>
                     <div class="card" data-target="excel">
-                        <div class="card-icon"><i class="fas fa-file-excel"></i></div>
+                        <div class="card-icon icon-green"><i class="fas fa-file-excel"></i></div>
                         <h4>Excel</h4>
                         <p>Analyze data and create formulas with natural language</p>
                     </div>
                     <div class="card" data-target="powerpoint">
-                        <div class="card-icon"><i class="fas fa-file-powerpoint"></i></div>
+                        <div class="card-icon icon-orange"><i class="fas fa-file-powerpoint"></i></div>
                         <h4>PowerPoint</h4>
                         <p>Design compelling presentations with AI assistance</p>
                     </div>
                     <div class="card" data-target="outlook">
-                        <div class="card-icon"><i class="fas fa-envelope"></i></div>
+                        <div class="card-icon icon-blue-light"><i class="fas fa-envelope"></i></div>
                         <h4>Outlook</h4>
                         <p>Enhance email communication with smart assistance</p>
                     </div>
                     <div class="card" data-target="teams">
-                        <div class="card-icon"><i class="fas fa-users"></i></div>
+                        <div class="card-icon icon-purple"><i class="fas fa-users"></i></div>
                         <h4>Teams</h4>
                         <p>Improve collaboration with meeting assistance and summaries</p>
                     </div>
                     <div class="card" data-target="loop">
-                        <div class="card-icon"><i class="fas fa-sync"></i></div>
+                        <div class="card-icon icon-teal"><i class="fas fa-sync"></i></div>
                         <h4>Loop</h4>
                         <p>Transform collaborative workspaces with AI capabilities</p>
                     </div>
